--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "4.6.0",
     "firebase": "^8.6.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
+    "react-edit-text": "^4.0.3",
+    "react-overlays": "^5.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
     "sweetalert2": "^11.0.0",
     "web-vitals": "^1.0.1"
   },
